# hackathon2.io

./: README.md  healthtech.db  pyproject.toml  requirements.txt
src/backend/: database.py  main.py
src/frontend/: app.py
