[tool.poetry]
name = "healthtech-reminder"
version = "0.1.0"
description = "A healthcare follow-up reminder system with AI capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
streamlit = "^1.31.0"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.0"
openai = "^1.10.0"
twilio = "^8.12.0"
sendgrid = "^6.11.0"
plotly = "^5.18.0"
pandas = "^2.2.0"
pydantic = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 